Tools/Convert_GL.h_and_GLext.h_C-Include/temp.h

/*
 * Datatypes
 */
typedef unsigned int	GLenum;
typedef short		GLshort;	/* 2-byte signed */
typedef int		GLint;		/* 4-byte signed */
typedef float		GLfloat;	/* single precision float */
typedef double		GLdouble;	/* double precision float */
//////typedef void (P PFNGLACTIVETEXTUREPROC) (GLenum texture);
//////typedef void (P PFNGLSAMPLECOVERAGEPROC) (GLclampf value, GLboolean invert);
//////typedef void (P PFNGLCOMPRESSEDTEXIMAGE3DPROC) (GLenum target, GLint level, GLenum internalformat, GLsizei width, GLsizei height, GLsizei depth, GLint border, GLsizei imageSize, const GLvoid *data);
//////typedef void (P PFNGLCOMPRESSEDTEXIMAGE2DPROC) (GLenum target, GLint level, GLenum internalformat, GLsizei width, GLsizei height, GLint border, GLsizei imageSize, const GLvoid *data);
//////typedef void (P PFNGLCOMPRESSEDTEXIMAGE1DPROC) (GLenum target, GLint level, GLenum internalformat, GLsizei width, GLint border, GLsizei imageSize, const GLvoid *data);
//////typedef void (P PFNGLCOMPRESSEDTEXSUBIMAGE3DPROC) (GLenum target, GLint level, GLint xoffset, GLint yoffset, GLint zoffset, GLsizei width, GLsizei height, GLsizei depth, GLenum format, GLsizei imageSize, const GLvoid *data);
//////typedef void (P PFNGLCOMPRESSEDTEXSUBIMAGE2DPROC) (GLenum target, GLint level, GLint xoffset, GLint yoffset, GLsizei width, GLsizei height, GLenum format, GLsizei imageSize, const GLvoid *data);
//////typedef void (P PFNGLCOMPRESSEDTEXSUBIMAGE1DPROC) (GLenum target, GLint level, GLint xoffset, GLsizei width, GLenum format, GLsizei imageSize, const GLvoid *data);
//////typedef void (P PFNGLGETCOMPRESSEDTEXIMAGEPROC) (GLenum target, GLint level, GLvoid *img);



/*
 * GL_ARB_multitexture (ARB extension 1 and OpenGL 1.2.1)
 */
//////#ifndef GL_ARB_multitexture
#define GL_ARB_multitexture 1
#define GL_TEXTURE0_ARB				0x84C0
#define GL_TEXTURE1_ARB				0x84C1
#define GL_TEXTURE2_ARB				0x84C2
#define GL_TEXTURE3_ARB				0x84C3
#define GL_TEXTURE4_ARB				0x84C4
#define GL_TEXTURE5_ARB				0x84C5
#define GL_TEXTURE6_ARB				0x84C6
#define GL_TEXTURE7_ARB				0x84C7
#define GL_TEXTURE8_ARB				0x84C8
#define GL_TEXTURE9_ARB				0x84C9
#define GL_TEXTURE10_ARB			0x84CA
#define GL_TEXTURE11_ARB			0x84CB
#define GL_TEXTURE12_ARB			0x84CC
#define GL_TEXTURE13_ARB			0x84CD
#define GL_TEXTURE14_ARB			0x84CE
#define GL_TEXTURE15_ARB			0x84CF
#define GL_TEXTURE16_ARB			0x84D0
#define GL_TEXTURE17_ARB			0x84D1
#define GL_TEXTURE18_ARB			0x84D2
#define GL_TEXTURE19_ARB			0x84D3
#define GL_TEXTURE20_ARB			0x84D4
#define GL_TEXTURE21_ARB			0x84D5
#define GL_TEXTURE22_ARB			0x84D6
#define GL_TEXTURE23_ARB			0x84D7
#define GL_TEXTURE24_ARB			0x84D8
#define GL_TEXTURE25_ARB			0x84D9
#define GL_TEXTURE26_ARB			0x84DA
#define GL_TEXTURE27_ARB			0x84DB
#define GL_TEXTURE28_ARB			0x84DC
#define GL_TEXTURE29_ARB			0x84DD
#define GL_TEXTURE30_ARB			0x84DE
#define GL_TEXTURE31_ARB			0x84DF
#define GL_ACTIVE_TEXTURE_ARB			0x84E0
#define GL_CLIENT_ACTIVE_TEXTURE_ARB		0x84E1
#define GL_MAX_TEXTURE_UNITS_ARB		0x84E2
 void  glActiveTextureARB(GLenum texture);
 void  glClientActiveTextureARB(GLenum texture);
 void  glMultiTexCoord1dARB(GLenum target, GLdouble s);
 void  glMultiTexCoord1dvARB(GLenum target, const GLdouble *v);
 void  glMultiTexCoord1fARB(GLenum target, GLfloat s);
 void  glMultiTexCoord1fvARB(GLenum target, const GLfloat *v);
 void  glMultiTexCoord1iARB(GLenum target, GLint s);
 void  glMultiTexCoord1ivARB(GLenum target, const GLint *v);
 void  glMultiTexCoord1sARB(GLenum target, GLshort s);
 void  glMultiTexCoord1svARB(GLenum target, const GLshort *v);
 void  glMultiTexCoord2dARB(GLenum target, GLdouble s, GLdouble t);
 void  glMultiTexCoord2dvARB(GLenum target, const GLdouble *v);
 void  glMultiTexCoord2fARB(GLenum target, GLfloat s, GLfloat t);
 void  glMultiTexCoord2fvARB(GLenum target, const GLfloat *v);
 void  glMultiTexCoord2iARB(GLenum target, GLint s, GLint t);
 void  glMultiTexCoord2ivARB(GLenum target, const GLint *v);
 void  glMultiTexCoord2sARB(GLenum target, GLshort s, GLshort t);
 void  glMultiTexCoord2svARB(GLenum target, const GLshort *v);
 void  glMultiTexCoord3dARB(GLenum target, GLdouble s, GLdouble t, GLdouble r);
 void  glMultiTexCoord3dvARB(GLenum target, const GLdouble *v);
 void  glMultiTexCoord3fARB(GLenum target, GLfloat s, GLfloat t, GLfloat r);
 void  glMultiTexCoord3fvARB(GLenum target, const GLfloat *v);
 void  glMultiTexCoord3iARB(GLenum target, GLint s, GLint t, GLint r);
 void  glMultiTexCoord3ivARB(GLenum target, const GLint *v);
 void  glMultiTexCoord3sARB(GLenum target, GLshort s, GLshort t, GLshort r);
 void  glMultiTexCoord3svARB(GLenum target, const GLshort *v);
 void  glMultiTexCoord4dARB(GLenum target, GLdouble s, GLdouble t, GLdouble r, GLdouble q);
 void  glMultiTexCoord4dvARB(GLenum target, const GLdouble *v);
 void  glMultiTexCoord4fARB(GLenum target, GLfloat s, GLfloat t, GLfloat r, GLfloat q);
 void  glMultiTexCoord4fvARB(GLenum target, const GLfloat *v);
 void  glMultiTexCoord4iARB(GLenum target, GLint s, GLint t, GLint r, GLint q);
 void  glMultiTexCoord4ivARB(GLenum target, const GLint *v);
 void  glMultiTexCoord4sARB(GLenum target, GLshort s, GLshort t, GLshort r, GLshort q);
 void  glMultiTexCoord4svARB(GLenum target, const GLshort *v);