Examples/glfw3/gl.pas


const
  GL_ARB_multitexture = 1;
  GL_TEXTURE0_ARB = $84C0;
  GL_TEXTURE1_ARB = $84C1;
  GL_TEXTURE2_ARB = $84C2;
  GL_TEXTURE3_ARB = $84C3;
  GL_TEXTURE4_ARB = $84C4;
  GL_TEXTURE5_ARB = $84C5;
  GL_TEXTURE6_ARB = $84C6;
  GL_TEXTURE7_ARB = $84C7;
  GL_TEXTURE8_ARB = $84C8;
  GL_TEXTURE9_ARB = $84C9;
  GL_TEXTURE10_ARB = $84CA;
  GL_TEXTURE11_ARB = $84CB;
  GL_TEXTURE12_ARB = $84CC;
  GL_TEXTURE13_ARB = $84CD;
  GL_TEXTURE14_ARB = $84CE;
  GL_TEXTURE15_ARB = $84CF;
  GL_TEXTURE16_ARB = $84D0;
  GL_TEXTURE17_ARB = $84D1;
  GL_TEXTURE18_ARB = $84D2;
  GL_TEXTURE19_ARB = $84D3;
  GL_TEXTURE20_ARB = $84D4;
  GL_TEXTURE21_ARB = $84D5;
  GL_TEXTURE22_ARB = $84D6;
  GL_TEXTURE23_ARB = $84D7;
  GL_TEXTURE24_ARB = $84D8;
  GL_TEXTURE25_ARB = $84D9;
  GL_TEXTURE26_ARB = $84DA;
  GL_TEXTURE27_ARB = $84DB;
  GL_TEXTURE28_ARB = $84DC;
  GL_TEXTURE29_ARB = $84DD;
  GL_TEXTURE30_ARB = $84DE;
  GL_TEXTURE31_ARB = $84DF;
  GL_ACTIVE_TEXTURE_ARB = $84E0;
  GL_CLIENT_ACTIVE_TEXTURE_ARB = $84E1;
  GL_MAX_TEXTURE_UNITS_ARB = $84E2;

procedure glActiveTextureARB(texture: TGLenum); cdecl; external;
procedure glClientActiveTextureARB(texture: TGLenum); cdecl; external;
procedure glMultiTexCoord1dARB(target: TGLenum; s: TGLdouble); cdecl; external;
procedure glMultiTexCoord1dvARB(target: TGLenum; v: PGLdouble); cdecl; external;
procedure glMultiTexCoord1fARB(target: TGLenum; s: TGLfloat); cdecl; external;
procedure glMultiTexCoord1fvARB(target: TGLenum; v: PGLfloat); cdecl; external;
procedure glMultiTexCoord1iARB(target: TGLenum; s: TGLint); cdecl; external;
procedure glMultiTexCoord1ivARB(target: TGLenum; v: PGLint); cdecl; external;
procedure glMultiTexCoord1sARB(target: TGLenum; s: TGLshort); cdecl; external;
procedure glMultiTexCoord1svARB(target: TGLenum; v: PGLshort); cdecl; external;
procedure glMultiTexCoord2dARB(target: TGLenum; s: TGLdouble; t: TGLdouble); cdecl; external;
procedure glMultiTexCoord2dvARB(target: TGLenum; v: PGLdouble); cdecl; external;
procedure glMultiTexCoord2fARB(target: TGLenum; s: TGLfloat; t: TGLfloat); cdecl; external;
procedure glMultiTexCoord2fvARB(target: TGLenum; v: PGLfloat); cdecl; external;
procedure glMultiTexCoord2iARB(target: TGLenum; s: TGLint; t: TGLint); cdecl; external;
procedure glMultiTexCoord2ivARB(target: TGLenum; v: PGLint); cdecl; external;
procedure glMultiTexCoord2sARB(target: TGLenum; s: TGLshort; t: TGLshort); cdecl; external;
procedure glMultiTexCoord2svARB(target: TGLenum; v: PGLshort); cdecl; external;
procedure glMultiTexCoord3dARB(target: TGLenum; s: TGLdouble; t: TGLdouble; r: TGLdouble); cdecl; external;
procedure glMultiTexCoord3dvARB(target: TGLenum; v: PGLdouble); cdecl; external;
procedure glMultiTexCoord3fARB(target: TGLenum; s: TGLfloat; t: TGLfloat; r: TGLfloat); cdecl; external;
procedure glMultiTexCoord3fvARB(target: TGLenum; v: PGLfloat); cdecl; external;
procedure glMultiTexCoord3iARB(target: TGLenum; s: TGLint; t: TGLint; r: TGLint); cdecl; external;
procedure glMultiTexCoord3ivARB(target: TGLenum; v: PGLint); cdecl; external;
procedure glMultiTexCoord3sARB(target: TGLenum; s: TGLshort; t: TGLshort; r: TGLshort); cdecl; external;
procedure glMultiTexCoord3svARB(target: TGLenum; v: PGLshort); cdecl; external;
procedure glMultiTexCoord4dARB(target: TGLenum; s: TGLdouble; t: TGLdouble; r: TGLdouble; q: TGLdouble); cdecl; external;
procedure glMultiTexCoord4dvARB(target: TGLenum; v: PGLdouble); cdecl; external;
procedure glMultiTexCoord4fARB(target: TGLenum; s: TGLfloat; t: TGLfloat; r: TGLfloat; q: TGLfloat); cdecl; external;
procedure glMultiTexCoord4fvARB(target: TGLenum; v: PGLfloat); cdecl; external;
procedure glMultiTexCoord4iARB(target: TGLenum; s: TGLint; t: TGLint; r: TGLint; q: TGLint); cdecl; external;
procedure glMultiTexCoord4ivARB(target: TGLenum; v: PGLint); cdecl; external;
procedure glMultiTexCoord4sARB(target: TGLenum; s: TGLshort; t: TGLshort; r: TGLshort; q: TGLshort); cdecl; external;
procedure glMultiTexCoord4svARB(target: TGLenum; v: PGLshort); cdecl; external;

implementation

end.
